Added Hint system

--- a/Constellation-Puzzles.csproj
+++ b/Constellation-Puzzles.csproj
@@ -78,10 +78,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\SceneManager.cs" />
     <Compile Include="Assets\Scripts\CameraMove.cs" />
     <Compile Include="Assets\Scripts\ConstellationControl.cs" />
+    <Compile Include="Assets\Scripts\HintTextController.cs" />
     <Compile Include="Assets\Scripts\MaskControll.cs" />
+    <Compile Include="Assets\Scripts\SceneManager.cs" />
     <Compile Include="Assets\Scripts\SparkingStar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
