--- a/Constellation-Puzzles.csproj
+++ b/Constellation-Puzzles.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AudioManager.cs" />
     <Compile Include="Assets\Scripts\CameraMove.cs" />
     <Compile Include="Assets\Scripts\ConstellationControl.cs" />
     <Compile Include="Assets\Scripts\HintTextController.cs" />
